I fixed the additonal buttons on mobile and I added the Erica's changes

--- a/web-flair/app/sass/_media.sass
+++ b/web-flair/app/sass/_media.sass
@@ -1138,6 +1138,9 @@
 				flex: 0 0 100%
 				margin-top: 15px
 
+		.additional-checkout-button 
+			margin-bottom: 10px !important
+
 
 /*==========  Mobile First  ==========*/
 
