--- a/web-flair/app/sass/blocks/second-banner/_second-banner.sass
+++ b/web-flair/app/sass/blocks/second-banner/_second-banner.sass
@@ -53,12 +53,12 @@
 
 
 .second_banner__shop_button	
-	bottom: 40px
+	bottom: 0px
 	box-sizing: border-box
 	display: flex 
 	justify-content: center
 	margin: 0	
-	padding: 10px
+	padding: 20px
 	position: absolute
 	right: 0
 	width: 100%
